--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,17 @@
 # DATASOURCE
-spring.datasource.url=jdbc:mysql://localhost:3306/sistema_pedidos?useTimezone=true&serverTimezone=America/Sao_Paulo
-spring.datasource.username=root
-spring.datasource.password=250999
+spring.datasource.driver-class-name= org.h2.Driver
+spring.datasource.url= jdbc:h2:mem:venda
+spring.datasource.username= root
+spring.datasource.password= 250999
 
+#JPA 
 
-# JPA
-spring.jpa.generate-ddl= true
-spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto = update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.show__sql = false
-spring.jpa.properties.javax.persistence.validation.mode = none
-spring.jpa.properties.hibernate.format_sql = true
+spring.jpa.show-sql= true
+spring.jpa.properties.hibernate.format_sql= true
+spring.jpa.generate-ddl=true
+spring.jpa.database= H2
+
+#H2
+
+spring.h2.console.enabled= true
+spring.h2.console.path=/h2-console
