--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,12 @@
 	<name>sistema-pedidos</name>
 	<description>Demo project for Spring Boot</description>
 	
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+		<java.version>17</java.version>
+	</properties>
+	
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
