--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,7 +1,7 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/sistema_pedido
-spring.datasource.username=root
+spring.datasource.url=jdbc:postgresql://localhost:5432/sistema_pedidos
+spring.datasource.username=postgres
 spring.datasource.password=250999
 
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
