--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=mysql://bce31f5c39a656:a4912b3a@us-cdbr-east-06.cleardb.net/heroku_81fda096d83429a?reconnect=true
+spring.datasource.url=${DATABASE_URL}
 
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=false
